--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/wwwroot/css/site.css
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/wwwroot/css/site.css
@@ -54,3 +54,10 @@ body {
   height: 60px;
   line-height: 60px; /* Vertically center the text there */
 }
+
+.scroller {
+    width: 300px;
+    height: 100px;
+    overflow-y: scroll;
+    scrollbar-color: rebeccapurple green;
+}
