--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Bloco/Delete.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Bloco/Delete.cshtml
@@ -23,6 +23,12 @@
         <dd>
             @Html.DisplayFor(model => model.OrganizacaoId)
         </dd>
+        <dt>
+            @Html.DisplayNameFor(model => model.Titulo)
+        </dt>
+        <dd>
+            @Html.DisplayFor(model => model.Titulo)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
