--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Organizacao/Create.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Organizacao/Create.cshtml
@@ -21,14 +21,11 @@
                 <span asp-validation-for="RazaoSocial" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Salvar" class="btn btn-success" />
+                <input type="submit" value="Salvar" class="btn btn-default" />
+                <a class="btn btn-primary" asp-action="Index">Voltar</a>
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
