--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Organizacao/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Organizacao/Index.cshtml
@@ -31,9 +31,9 @@
                 @Html.DisplayFor(modelItem => item.RazaoSocial)
             </td>
             <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                    <a href="@Url.Action("Details", "Organizacao", new { id = item.Id })" class="btn btn-primary btn-xs"><i class="fa fa-folder"></i> Detalhes </a>
+                    <a href="@Url.Action("Edit", "Organizacao", new { id = item.Id })" class="btn btn-info btn-xs"><i class="fa fa-pencil"></i> Editar </a>
+                    <a href="@Url.Action("Delete", "Organizacao", new { id = item.Id })" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i> Remover </a>
             </td>
         </tr>
 }
