--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Index.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Planejamento/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SalasUfsWeb.Models.ViewModels.PlanejamentoViewModel>
+﻿@model IEnumerable<Model.ViewModel.PlanejamentoViewModel>
 
 @{
     ViewData["Title"] = "Index";
