--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_Layout.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_Layout.cshtml
@@ -24,6 +24,8 @@
     <link rel="stylesheet" href="~/plugins/daterangepicker/daterangepicker.css">
     <!-- summernote -->
     <link rel="stylesheet" href="~/plugins/summernote/summernote-bs4.css">
+
+    <link rel="stylesheet" href="~/css/site.css" />
     <!-- Google Font: Source Sans Pro -->
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
