--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/wwwroot/css/site.css
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/wwwroot/css/site.css
@@ -55,9 +55,11 @@ body {
   line-height: 60px; /* Vertically center the text there */
 }
 
-.scroller {
-    width: 300px;
-    height: 100px;
-    overflow-y: scroll;
-    scrollbar-color: rebeccapurple green;
+.align-element {
+    display: inline-block;
+    margin-right: 20pt;
+}
+
+.ocupation {
+    width: 150%;
 }
