==== AUTENTICAÇÃO NA APLICAÇÃO WEB ====
1 - Criação do Metodo "GetByLoginAndPass" em UsuarioService, para validar o login juntamente com LoginViewModel para captação dos dados do formulario de login.

2 - Criação de Login/Usuario Controllers, voltadas para fins de autenticação e criação de usuarios no sistema.

3 - Criação de Views de Login/AcessoNegado(usuario sem permissão) para LoginController e View de Criação de Usuario para UsuarioController.

4 - Configuração do Startup para suportar Autenticação.

5 - Criação de uma biblioteca de classe "Utils" onde ficaram metodos de criptografia e manipulação de strings, para que possam ser utilizados em todo o projeto.

6 - Alteração no campo SENHA varchar(45) -> varchar(100), no modelo lógico, para receber o HASH da senha na criação do usuario.

--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_Layout.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_Layout.cshtml
@@ -30,22 +30,29 @@
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700" rel="stylesheet">
 </head>
 <body class="hold-transition sidebar-mini layout-fixed">
-    <div class="wrapper">
-        <!-- Content Wrapper. Contains page content -->
-        <partial name="_MenuPartial" />
-        <partial name="_TopBarPartial" />
-        <!-- Main content -->
-        <section class="content">
-            <div class="container-fluid">
-                <!-- Small boxes (Stat box) -->
-                @RenderBody()
-            </div>
-        </section>
+    @if (!User.Identity.IsAuthenticated)
+    {
+    <div style="padding: 10px 10px 10px 10px">
+        @RenderBody()
     </div>
+    }
+    else
+    {
 
+        <div class="wrapper">
+            <!-- Content Wrapper. Contains page content -->
+            <partial name="_MenuPartial" />
+            <partial name="_TopBarPartial" />
+            <!-- Main content -->
+            <section class="content">
+                <div class="container-fluid">
+                    <!-- Small boxes (Stat box) -->
+                    @RenderBody()
+                </div>
+            </section>
+        </div>
+    }
     </div> <!-- fechando a tag do menu-->
-
-
 
     <footer class="main-footer">
         <strong>Copyright &copy; 2020 <a href="http://adminlte.io">SalaUFS</a>.</strong>
