--- a/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
+++ b/Código/AplicacaoGerenciamento/WebAPI/SalasUfsWeb/Views/Shared/_MenuPartial.cshtml
@@ -222,6 +222,13 @@
                         <p>Usuários</p>
                     </a>
                 </li>
+                <li class="nav-header">SISTEMA</li>
+                <li class="nav-item">
+                    <a class="nav-link" asp-controller="login" asp-action="logout">
+                        <i class="nav-icon fa fa-power-off"></i>
+                        <p>Sair</p>
+                    </a>
+                </li>
             </ul>
             <!-- /.sidebar -->
         </nav>
